--- a/app/src/main/res/layout/item_rv.xml
+++ b/app/src/main/res/layout/item_rv.xml
@@ -9,6 +9,7 @@
         android:id="@+id/tv_name"
         android:text="Sanjar Suvonov"
         android:textSize="25sp"
+        android:maxLines="1"
         android:layout_marginStart="10dp"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
@@ -17,6 +18,8 @@
         android:id="@+id/tv_number"
         android:text="+99897 007 96 20"
         android:textSize="20sp"
+        android:maxLines="1"
+        android:maxLength="13"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:textColor="@color/black"
